--- a/notification-web-application/WebContent/WEB-INF/page-views/login.html
+++ b/notification-web-application/WebContent/WEB-INF/page-views/login.html
@@ -11,11 +11,19 @@
 <link rel="stylesheet" href="css/style.css">
 
 <script src="js/index.js"></script>
-
-
+<script type="text/javascript">
+var fby = fby || [];
+fby.push(['showTab', {id: '9841', position: 'right', color: '#FF1F3A'}]);
+(function () {
+    var f = document.createElement('script'); f.type = 'text/javascript'; f.async = true;
+    f.src = '//cdn.feedbackify.com/f.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(f, s);
+})();
+</script>
 </head>
 
 <body>
+
 	<form name="loginForm" id="loginForm" method="post" action="validateUser">
 		<div class="wrap">
 			<input type="text" name="username" placeholder="username" required>
